<resources>

    <string name="app_name">ACTIVIDAD</string>
    <string name="button1_datos">Ingresar datos</string>
    <string name="edt_nombres">Ingresar nombres</string>
    <string name="edt_apellidos">Ingresar apellidos</string>
    <string name="tv_sexo">Sexo</string>
    <string name="rgb_hombre">Hombre</string>
    <string name="rgb_mujer">Mujer</string>
    <string name="tv_fechaNacimientor">Fecha de nacimiento</string>
    <string name="button2_siquiente">SIGUIENTE</string>
    <string name="TextView_datos">REQUERIMOS SUS DATOS</string>
    <string name="spinner_hint">Grado de escolaridad</string>
    <string name="button_text">CAMBIAR\n fecha</string>

    <string name="edt_telefono">Ingrese número telefonico</string>
    <string name="edt_correo">Ingrese su correo</string>
    <string name="edt_direccion">Ingrese du dirección</string>
    <string name="btn_validarDatos">Validar Datos</string>
    <string name="btn_imprimir">Imprimir</string>
    <string name="edt_datosPersonales">                          Datos Personales</string>

    <string-array name="escolaridad">
        <item>Seleccione</item>
        <item>Primaria</item>
        <item>Segundaria</item>
        <item>Universitario</item>
        <item>Otro</item>
    </string-array>
</resources>